commented a figure in the tex file, as the image file has been corrupted and it stop the latex file from being compiled.

--- a/ampsnrthr4_dsnrthr3.5/report/report.tex
+++ b/ampsnrthr4_dsnrthr3.5/report/report.tex
@@ -116,7 +116,7 @@ The amplitude value and the measured slope at these deviant pixels are shown in 
 \subfigure{\includegraphics[width=0.47\columnwidth]{EB_amp_scatter.pdf}}
 \subfigure{\includegraphics[width=0.47\columnwidth]{amp_ratio_vs_dustintensity.pdf}}
 \subfigure{\includegraphics[width=0.47\columnwidth]{E-pol_slope_vs_dust_intensity.pdf}}
-\subfigure{\includegraphics[width=0.47\columnwidth]{B-pol_slope_vs_dust_intensity.pdf}}
+%\subfigure{\includegraphics[width=0.47\columnwidth]{B-pol_slope_vs_dust_intensity.pdf}}
 \caption{Green dots depicts high SNR point which the black dots depicts the low SNR points. The red circles indicate pixels for which $A^{BB} < 0.53A^{EE}$ while the blue circles indicate pixels where $A^{BB} > 0.53A^{EE}$. {\bf Note that the slopes for the red and blue circles are consistent with the global slope.}}
 \label{fig:amp_sl_scatter}
 \end{figure}
