--- a/ampsnrthr4_dsnrthr3.5/article/article.tex
+++ b/ampsnrthr4_dsnrthr3.5/article/article.tex
@@ -27,6 +27,9 @@
 
 \section{Methods}
 
+To generate the scalar E/B maps from Stokes parameters Q/U, we use a  pipeline based on the methods of \cite{Ferte2013, Kim2010a} to correct for mask leakage by taking the transform of the map, apodization mask, and their derivative.  Our pipeline leaves leakage of power from primordial $E$ to $B$ is at a level comparable to a $B$-mode signal at $r=10^{-7}$, well below the target of current and planned experiments.
+
+
 \section{Results}
 
 
